add image url tutorial on sign up

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,8 @@
                 <input class="form-control" type="text" name="firstName" placeholder="First Name" required>
                 <input class="form-control" type="text" name="lastName" placeholder="Last Name" required>
                 <input class="form-control" type="email" name="email" placeholder="Email" required>
-                <input class="form-control" type="text" name="avatar" placeholder="Avatar url" required>
+                <input class="form-control" type="text" name="avatar" placeholder="Avatar url">
+                <div class="p-1"><a href="https://www.wikihow.com/Get-the-URL-for-Pictures" target="_blank">How to copy image URL?</a></div>
                 <input class="form-control" type="text" name="adminCode" placeholder="Admin code">
                 <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>        
         </form>
